add company animation

--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -168,28 +168,28 @@
         <div class="company">
             <div class="company-all">
                 <div class="company-png">
-                    <img src="../ZEN/img/company/Booking.png" alt="">
+                    <img id = Booking src="../ZEN/img/company/Booking.png" alt="" onmouseover="onMouseCompany1()"  onmouseout="outMouseCompany1()">
                 </div>
                 <div class="company-png">
-                    <img src="../ZEN/img/company/AliExpress.png" alt="">
+                    <img id = AliExpress src="../ZEN/img/company/AliExpress.png" alt="" onmouseover="onMouseCompany2()"  onmouseout="outMouseCompany2()">
                 </div>
                 <div class="company-png">
-                    <img src="../ZEN/img/company/Allegro.png" alt="">
+                    <img id = Allegro src="../ZEN/img/company/Allegro.png" alt="" alt="" onmouseover="onMouseCompany3()"  onmouseout="outMouseCompany3()">
                 </div>
                 <div class="company-png">
-                    <img src="../ZEN/img/company/Zalando-lounge.png" alt="">
+                    <img id = Zalando-lounge src="../ZEN/img/company/Zalando-lounge.png" alt="" onmouseover="onMouseCompany4()"  onmouseout="outMouseCompany4()">
                 </div>
                 <div class="company-png">
-                    <img src="../ZEN/img/company/Lidl.png" alt="">
+                    <img id = Lidl src="../ZEN/img/company/Lidl.png" alt="" onmouseover="onMouseCompany5()"  onmouseout="outMouseCompany5()">
                 </div>
                 <div class="company-png">
-                    <img src="../ZEN/img/company/MadiaMarkt.png" alt="">
+                    <img id = MadiaMarkt src="../ZEN/img/company/MadiaMarkt.png" alt="" onmouseover="onMouseCompany6()"  onmouseout="outMouseCompany6()">
                 </div>
                 <div class="company-png">
-                    <img src="../ZEN/img/company/RTV-evro-AGD.png" alt="">
+                    <img id = RTV-evro-AGD src="../ZEN/img/company/RTV-evro-AGD.png" alt="" onmouseover="onMouseCompany7()"  onmouseout="outMouseCompany7()">
                 </div>
                 <div class="company-png">
-                    <img src="../ZEN/img/company/Groupon.png" alt="">
+                    <img id = Groupon src="../ZEN/img/company/Groupon.png" alt="" onmouseover="onMouseCompany8()"  onmouseout="outMouseCompany8()">
                 </div>
             </div>
         </div>
@@ -425,6 +425,7 @@
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
     <script src="../../js/up.js"></script>
+    <script src="../ZEN/js/script.js"></script>
 
 
 
