add footer animation

--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -370,7 +370,7 @@
                     </div>
                     <div class="footerZEN-menu-common-content">
                         <div class="footerZEN-menu-common-content-img">
-                            <img src="../ZEN/img/ZEN-footer-IN.png" alt="">
+                            <img id = ZEN_footer src="../ZEN/img/ZEN-footer-IN.png" alt="" onmouseover="onMouseCompany9()"  onmouseout="outMouseCompany9()">
                         </div>
 
                     </div>
