add target="_blank" in product

--- a/index.html
+++ b/index.html
@@ -146,37 +146,37 @@
                 <div class="products__inner-box">
                     <div class="product__item mix category-arcade" data-order="1">
                         <div class="product__item-inner">
-                            <a class="product__item-img" href="html/GamesOne/GameOne.html"
+                            <a class="product__item-img" href="html/GamesOne/GameOne.html" target="_blank"
                                 style="background-image: url(img/main/article3.png)"></a>
                         </div>
                     </div>
 
 
                     <div class="product__item mix category-apps" data-order="2">
-                        <a class="product__item-img" href="html/GamesOne/GameOne-Calc-iOS.html"
+                        <a class="product__item-img" href="html/GamesOne/GameOne-Calc-iOS.html" target="_blank"
                             style="background-image: url(img/GamesOne/Calc-on-iPhone-JS.svg); background-size:contain"></a>
                     </div>
 
 
                     <div class="product__item mix category-logical" data-order="3">
-                        <a class="product__item-img" href="html/GamesOne/GameOne-TicTacToe.html"
+                        <a class="product__item-img" href="html/GamesOne/GameOne-TicTacToe.html" target="_blank"
                             style="background-image: url(img/GamesOne/TicTacToe.svg); background-size:contain"></a>
                     </div>
 
 
                     <div class="product__item mix category-desk" data-order="4">
-                        <a class="product__item-img" href="figma/SOS/index.html"
+                        <a class="product__item-img" href="figma/SOS/index.html" target="_blank"
                             style="background-image: url(figma/SOS/img/SOS-layout.png); background-size:contain"></a>
                     </div>
 
 
                     <div class="product__item mix category-logical" data-order="5">
-                        <a class="product__item-img" href="figma/ZEN/index.html"
+                        <a class="product__item-img" href="figma/ZEN/index.html" target="_blank"
                             style="background-image: url(figma/ZEN/img/ZEN-layout.png); background-size:contain"></a>
                     </div>
 
                     <div class="product__item mix category-logical" data-order="6">
-                        <a class="product__item-img" href="html/GamesOne/GameOne.html"
+                        <a class="product__item-img" href="html/GamesOne/GameOne.html" target="_blank"
                             style="background-image: url(img/main/article3.png)"></a>
                     </div>
 
