add ZEN burger-menu and any fix

--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -13,47 +13,50 @@
     <title>ZEN</title>
 </head>
 
-<body>    
+<body>
 
-    <div class="containerZEN">
-        <header class="headerZEN" id="up">
 
-            <div class="headerZEN-LEFT">
-                <div class="headerZEN-LEFT-img">
-                    <div class="headerZEN-LEFT-img-Fill">
-                        <img src="../ZEN/img/Fill-7.png" alt="">
-                    </div>
-                    <div class="headerZEN-LEFT-img-mastercard">
-                        <img src="../ZEN/img/Mastercard-Logo.png" alt="">
-                    </div>
+	<header class="headerZEN" id="up">
+		<div class="header-container-ZEN">
+			<div class="headerZEN-LEFT-img">
+                <div class="headerZEN-LEFT-img-Fill">
+                    <img src="img/Fill-7.png" alt="">
                 </div>
-
-                <div class="headerZEN-LEFT-link">
-                    <a href="#">Personal</a>
-                    <a href="#">Business</a>
+                <div class="headerZEN-LEFT-img-mastercard">
+                    <img src="img/Mastercard-Logo.png" alt="">
                 </div>
-
             </div>
+			<div class="header-menu-ZEN menu">
+				<nav class="menu-bodyZEN">
+					<ul class="menu-listZEN">
+						<li><a href="#" class="menu-link-ZEN">Personal</a></li>
+						<li><a href="#" class="menu-link-ZEN">Business</a></li>
+			
+					</ul>
 
+					<ul class="menu-listZEN">
+						<li><a href="#" class="menu-link-ZEN">Zenefits</a></li>
+						<li><a href="#" class="menu-link-ZEN">Features</a></li>
+						<li><a href="#" class="menu-link-ZEN">Pricing</a></li>
+			
+					</ul>
+				</nav>
 
-            <div class="headerZEN-RIGHT">
+			</div>
 
-                <div class="headerZEN-RIGHT-link">
-                    <a href="#">Zenefits</a>
-                    <a href="#">Features</a>
-                    <a href="#">Pricing</a>
+            <div class="headerZEN-RIGHT-button">
+                <div class="headerZEN-RIGHT-button-text">
+                    Get app
                 </div>
-
-                <div class="headerZEN-RIGHT-button">
-                    <div class="headerZEN-RIGHT-button-text">
-                        Get app
-                    </div>
-                </div>
-
             </div>
+			<div class="menu-burgerZEN">
+				<span></span>
+			</div>
+		</div>
+	</header>
 
-        </header>
-    </div>
+    
+     
 
     <div class="containerZEN">
         <div class="sectionZEN-common">
@@ -78,10 +81,10 @@
                 </div>
                 <div class="sectionZEN-common-text-buttonApps">
                     <div class="sectionZEN-common-text-buttonApps-AppStore">
-                        <a href="https://www.apple.com/app-store/"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
+                        <a href="https://www.apple.com/app-store/" target="_blank"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
                     </div>
                     <div class="sectionZEN-common-text-buttonApps-GooglePlay">
-                        <a href="https://play.google.com/store"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
+                        <a href="https://play.google.com/store" target="_blank"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
 
                     </div>
                 </div>
@@ -294,10 +297,10 @@
                 </div>
                 <div class="ZEN-section8-button">
                     <div class="ZEN-section8-AppStore">
-                        <a href="https://www.apple.com/app-store/"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
+                        <a href="https://www.apple.com/app-store/" target="_blank"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
                     </div>
                     <div class="ZEN-section8-AppStore">
-                        <a href="https://play.google.com/store"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
+                        <a href="https://play.google.com/store" target="_blank"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -426,6 +429,7 @@
 
     <script src="../../js/up.js"></script>
     <script src="../ZEN/js/script.js"></script>
+    <script src="../ZEN/js/burgerMenu.js"></script>
 
 
 
