--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-    
+    <link rel="icon" href="img/Fill-7.ico">
     <link rel="stylesheet" href="../SOS/css/all.css">
     <link rel="stylesheet" href="../../css/style.css">
     <title>ZEN</title>
