add pageup in SOS

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -17,7 +17,7 @@
         style="background-image: url(../../figma/SOS/img/bg-image-1.jpg); background-size:cover">
         <div class="container1">
             <header>
-                <div class="header-inner">
+                <div class="header-inner" id="up">
                     <div class="logo">
                         <img src="img/logo-1.png" alt="">
                     </div>
@@ -474,11 +474,19 @@
 
     </section>
 
+    <a href="#up" class="pageup">
+        <img src="../SOS/img/up.svg" alt="" class="pageup">
+    </a>
+
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
     <script src="../SOS/js/button-subscribe.js"></script>
     <script src="../SOS/js/SOS-s3menu.js"></script>
+    <script src="../../js/up.js"></script>
     <!-- <script src="../SOS/js/switch-img.js"></script> -->
 
     <script>
