add ZEN height sections

--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -97,7 +97,7 @@
                 <img src="../ZEN/img/section2.png" alt="">
             </div>
 
-            <div class="sectionZEN-common-text">
+            <div class="sectionZEN-common-text ZENs2h">
                 <div class="sectionZEN-common-text-h1">
                     1-year warranty boost
                 </div>
@@ -116,7 +116,7 @@
         </div>
 
         <div class="sectionZEN-common">
-            <div class="sectionZEN-common-text">
+            <div class="sectionZEN-common-text ZENs3h">
                 <div class="sectionZEN-common-text-h1">
                     ZEN Care
                 </div>
@@ -192,7 +192,7 @@
         </div>
 
         <div class="sectionZEN-common">
-            <div class="sectionZEN-common-text">
+            <div class="sectionZEN-common-text ZENs4h">
                 <div class="sectionZEN-common-text-h1">
                     ZEN shopping Mastercard
                 </div>
@@ -224,7 +224,7 @@
                 <img src="../ZEN/img/section6.png" alt="">
             </div>
 
-            <div class="sectionZEN-common-text">
+            <div class="sectionZEN-common-text ZENs5h">
                 <div class="sectionZEN-common-text-h1">
                     Shopping with no fees
                 </div>
@@ -247,7 +247,7 @@
         </div>
 
         <div class="sectionZEN-common">
-            <div class="sectionZEN-common-text">
+            <div class="sectionZEN-common-text ZENs6h">
                 <div class="sectionZEN-common-text-h1">
                     One app, one account, many currencies
                 </div>
@@ -273,7 +273,7 @@
             <div class="sectionZEN-img">
                 <img src="../ZEN/img/section8.png" alt="">
             </div>
-            <div class="sectionZEN-common-text">
+            <div class="sectionZEN-common-text ZENs7h">
                 <div class="sectionZEN-common-text-h1">
                     Quick and easy account creation
                 </div>
