fix pageUp in all project

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -474,8 +474,8 @@
 
     </section>
 
-    <a href="#up" class="pageup">
-        <img src="../SOS/img/up.svg" alt="" class="pageup">
+    <a href="#up" class="pageUp">
+        <img src="../SOS/img/up.svg" alt="" class="pageUp">
     </a>
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
