--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
     </div>
 
     <!-- КНОПОЧКА "ВВЕРХ" -->
-    <a href="#up" class="pageup">
-        <img src="icons/up.svg" alt="" class="pageup">
+    <a href="#up" class="pageUp">
+        <img src="icons/up.svg" alt="" class="pageUp">
     </a>
 
     <!-- СКРИПТЫ -->
