--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -414,8 +414,8 @@
 
     </div>
 
-    <a href="#up" class="pageup">
-        <img src="../ZEN/img/up.svg" alt="" class="pageup">
+    <a href="#up" class="pageUp">
+        <img src="../ZEN/img/up.svg" alt="" class="pageUp">
     </a>
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
