--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -434,10 +434,15 @@
 
 
                     <div class="footer-up-imgs">
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+                        <span>
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        </span>
+                        <span>
+                            <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+                        </span>
+                       
                     </div>
                 </div>
 
