fix html SOS section 4

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -216,59 +216,63 @@
             </div>
         </div>
 
-        <div class="table table-os">
-            <div class="table-name">
-                os:
-            </div>
-            <div class="table-text">
-                Windows 7 64-bit only
-                <br>
-                (No OSX support at this time)
-            </div>
-        </div>
-        <div class="table table-processor">
-            <div class="table-name">
-                Processor:
-            </div>
-            <div class="table-text">
-                Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ
-            </div>
-        </div>
-        <div class="table table-memory">
-            <div class="table-name">
-                Memory:
-            </div>
-            <div class="table-text">
-                8 GB RAM
-            </div>
-        </div>
+        <div class="TableSOS-wrapper">
+            <div class="TableSOS-inner">
+                <div class="table table-os">
+                    <div class="table-name">
+                        os:
+                    </div>
+                    <div class="table-text">
+                        Windows 7 64-bit only
+                        <br>
+                        (No OSX support at this time)
+                    </div>
+                </div>
+                <div class="table table-processor">
+                    <div class="table-name">
+                        Processor:
+                    </div>
+                    <div class="table-text">
+                        Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ
+                    </div>
+                </div>
+                <div class="table table-memory">
+                    <div class="table-name">
+                        Memory:
+                    </div>
+                    <div class="table-text">
+                        8 GB RAM
+                    </div>
+                </div>
 
-        <div class="table table-storage">
-            <div class="table-name">
-                Storage:
-            </div>
-            <div class="table-text">
-                8 GB available space
+                <div class="table table-storage">
+                    <div class="table-name">
+                        Storage:
+                    </div>
+                    <div class="table-text">
+                        8 GB available space
+                    </div>
+                </div>
+
+                <div class="table2 table-storage">
+                    <div class="table-name">
+                        Graphics:
+                    </div>
+                    <div class="table-text">
+                        NVIDIA GeForce GTX 660 2GB or <br>
+                        AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)
+                    </div>
+                </div>
+
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+                <div class="line4"></div>
+                <div class="line5"></div>
+                <div class="line6"></div>
+                <div class="line7"></div>
             </div>
         </div>
-
-        <div class="table2 table-storage">
-            <div class="table-name">
-                Graphics:
-            </div>
-            <div class="table-text">
-                NVIDIA GeForce GTX 660 2GB or <br>
-                AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)
-            </div>
-        </div>
-
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-        <div class="line4"></div>
-        <div class="line5"></div>
-        <div class="line6"></div>
-        <div class="line7"></div>
 
     </section>
 
