--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -280,7 +280,7 @@
     <section class="SectionFive"
         style="background-image: url(../../figma/SOS/img/img-section-five.jpg); background-size:cover">
        <div class="SOS-s5-wrapper">
-           <div class="left">
+           <div class="SOS-s5-left">
                 <div class="s5h1-up">
                     What people think?
                 </div>
@@ -301,7 +301,7 @@
            </div>
        </div>
 
-        <div class="right">
+        <div class="SOS-s5-right">
             <div class="evanSOS">
                 <div class="evan reviewsSOS">
                     <div class="reviewsSOS-name">
