--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -404,32 +404,47 @@
 
     <section class="SectionSix"
         style="background-image: url(../../figma/SOS/img/img-section-six.jpg); background-size:cover">
-        <div class="s6h1-up">
-            Want to stay in touch?
-        </div>
-        <div class="s6h1-main">
-            newsletter SUBSCRIBE
-        </div>
-        <div class="s6h1-text">
-            In order to start receiving our news, all you have to do is enter your email address. Everything else will
-            be taken care of by us. We will send you emails containing information about game. We don’t spam.
-        </div>
+        <div class="SOS-S6-wrapper">
+            <div class="SOS-S6-inner">
+                <div class="SOS-s6-left">
+                    <div class="s6img-main">
+                        <img src="../SOS/img/s6-main.png" alt="">
+                    </div>
+                </div>
 
-        <div class="s6img-main">
-            <img src="../SOS/img/s6-main.png" alt="">
-        </div>
+                <div class="SOS-s6-right">
+                    <div class="s6h1-up">
+                        Want to stay in touch?
+                    </div>
+                    <div class="s6h1-main">
+                        newsletter SUBSCRIBE
+                    </div>
+                    <div class="s6h1-text">
+                        In order to start receiving our news, all you have to do is enter your email address. Everything else will
+                        be taken care of by us. We will send you emails containing information about game. We don’t spam.
+                    </div>
 
-        <div class="email">
-            <div class="email-text">
-                Your email address
+
+
+                    <div class="SOSemail-wrapper">
+                        <div class="email">
+                            <div class="email-text">
+                                Your email address
+                            </div>
+
+                            <div class="email-email">
+                                <input type="email" class="field-email" placeholder="aliciliniavopir@gmail.com" required maxlength="25">
+                            </div>
+                        </div>
+
+                        <button class="ButtonSubscribe"></button>
+                    </div>
+                </div>
             </div>
 
-            <div class="email-email">
-                <input type="email" class="field-email" placeholder="aliciliniavopir@gmail.com" required maxlength="25">
-            </div>
         </div>
 
-        <button class="ButtonSubscribe"></button>
+
 
         <footer class="footer-wrapper">
             <div class="footer-wrapper-inner">
