fix SOS adaptive

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -184,7 +184,7 @@
                             CREATE ALLIES AND ENEMIES
                         </div>
                         <div class="s3text2 hidden">
-                            s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2
+                            s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2
                         </div>
                     </div>
             
@@ -194,7 +194,7 @@
                         </div>
             
                         <div class="s3text3 hidden">
-                            s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3
+                            s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3
                         </div>
                     </div>
                 </div>
