add SOS s5 adaptive

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -295,11 +295,13 @@
                     to say.
                 </div>
 
-                <button class="Read-more">
-                    <div class="Read-more-text">
-                        Read more testimonials
-                    </div>
-                </button>
+                <div class="Read-more-inner">
+                    <button class="Read-more">
+                        <div class="Read-more-text">
+                            Read more testimonials
+                        </div>
+                    </button>
+                </div>
            </div>
 
 
