add SOS language drop-down

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -37,14 +37,23 @@
 			</div>
 
             <div class="headerSOS-RIGHT-button">
-                <div class="language">
-                    <div class="language-text">
-                        eng
+
+                <div class="language-wrapper">
+                    <div class="language">
+                        <div class="language-text">
+                            eng
+                        </div>
+                        <div class="language-arrow">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
                     </div>
-                    <div class="language-arrow">
-                        <i class="fas fa-chevron-down"></i>
+                    <div class="language_drop-down">
+                        <li><a href="#">rus</a></li>
+                        <li><a href="#">fra</a></li>
+                        <li><a href="#">deu</a></li>
                     </div>
                 </div>
+
 
 				<div class="headerSOS-xbox">
 					<img src="img/xbox-icon.svg" alt="">
