--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -124,7 +124,7 @@
                                 trick is: <strong>three</strong> people can survive. Will you run solo or form friendships with others
                                 to escape?
                                 <br> <br>
-                                Making the right decisions could be the difference between life and death.
+                                Making the right decisions could be the difference between <span>life and death</span>.
                             </div>
                         </div>
                     </div>           
