SOS added clickable Steam and Xbox icons (in the header)

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -56,10 +56,10 @@
 
 
 				<div class="headerSOS-xbox">
-					<img src="img/xbox-icon.svg" alt="">
+                    <a href="https://www.xbox.com/" target="_blank"><img src="img/xbox-icon.svg" alt=""></a>
 				</div>
 				<div class="headerSOS-steam">
-					<img src="img/steam-icon.svg" alt="">
+                    <a href="https://store.steampowered.com/" target="_blank"><img src="img/steam-icon.svg" alt=""></a>
 				</div>
             </div>
 			<div class="menu-burgerSOS">
