--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -20,7 +20,7 @@
 		<div class="header-container-SOS">
 			<div class="headerSOS-LEFT-img">
                 <div class="headerSOS-LEFT-img-logo">
-                    <img src="img/logo-1.png" alt="">
+                    <a href="index.html"><img src="img/logo-1.png" alt=""></a>
                 </div>
             </div>
 			<div class="header-menu-SOS menu">
@@ -483,9 +483,8 @@
             <div class="footer-wrapper-inner">
                 <div class="footer-up">
                     <div class="footer-up-img">
-                        <img src="../SOS/img/logo-1.png" alt="">
+                        <a href="index.html"><img src="../SOS/img/logo-1.png" alt=""></a>
                     </div>
-
 
                     <div class="footer-menu">
                         <a href="#">Main</a>
