SOS fix "The story"

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -90,7 +90,7 @@
             </div>
 
 
-            <div class="the-story">
+            <div class="the-story" id="storyOut">
                 <div class="the-story__text">
                     the story
                 </div>
@@ -488,7 +488,7 @@
 
                     <div class="footer-menu">
                         <a href="#">Main</a>
-                        <a href="#">About</a>
+                        <a href="#" id="aboutOut">About</a>
                         <a href="#">Game features</a>
                         <a href="#">System requirements</a>
                         <a href="#">quotes</a>
