--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="SectionOne"
+    <section class="SectionOne" id="mainIn"
         style="background-image: url(../../figma/SOS/img/bg-image-1-min.jpg); background-size:cover">
         <div class="container1">
             <header class="headerSOS" id="up">
@@ -487,11 +487,11 @@
                     </div>
 
                     <div class="footer-menu">
-                        <a href="#">Main</a>
-                        <a href="#" id="aboutOut">About</a>
-                        <a href="#">Game features</a>
-                        <a href="#">System requirements</a>
-                        <a href="#">quotes</a>
+                        <a id="main-Out">Main</a>
+                        <a id="about-Out">About</a>
+                        <a id="features-Out">Game features</a>
+                        <a id="requirements-Out">System requirements</a>
+                        <a id="quotes-Out">quotes</a>
                     </div>
 
 
@@ -552,6 +552,7 @@
     <script src="js/sliderSOS.js"></script>
     <script src="../SOS/js/scrollUp.js"></script>
     <script src="../SOS/js/scroll-Header__SOS.js"></script>
+    <script src="../SOS/js/scroll-footer__SOS.js"></script>
     <!-- <script src="../SOS/js/switch-img.js"></script> -->
 
 
