SOS mini scroll

--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <section class="backgrounds" id="backgrounds">
+
+    </section>
     <section class="SectionOne" id="mainIn"
         style="background-image: url(../../figma/SOS/img/bg-image-1-min.jpg); background-size:cover">
         <div class="container1">
@@ -548,11 +551,12 @@
     <script src="js/button-subscribe.js"></script>
     <script src="js/SOS-s3menu.js"></script>
     <script src="js/burgerMenu.js"></script>
-    <script src="../../js/up.js"></script>
+    <!-- <script src="../../js/up.js"></script> -->
     <script src="js/sliderSOS.js"></script>
     <script src="../SOS/js/scrollUp.js"></script>
     <script src="../SOS/js/scroll-Header__SOS.js"></script>
     <script src="../SOS/js/scroll-footer__SOS.js"></script>
+    <script src="../SOS/js/backgroundScroll.js"></script>
     <!-- <script src="../SOS/js/switch-img.js"></script> -->
 
 
