--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -16,8 +16,7 @@
     <section class="backgrounds" id="backgrounds">
 
     </section>
-    <section class="SectionOne" id="mainIn"
-        style="background-image: url(../../figma/SOS/img/bg-image-1-min.jpg); background-size:cover">
+    <section class="SectionOne" id="mainIn">
         <div class="container1">
             <header class="headerSOS" id="up">
 		<div class="header-container-SOS">
@@ -182,7 +181,7 @@
 
 
 <!-- вёрстка третьего блока -->
-    <section class="SectionThree" id="featuresIn" style="background-image: url(../SOS/img/Group-min.jpg); background-size:cover">
+    <section class="SectionThree" id="featuresIn">
         <div class="SOS-S3-container">
             <div class="SOS-S3-wrapper">
                 <div class="S3-h1up-text">
@@ -231,7 +230,7 @@
     </section>
 
     <!-- вёрстка четвёртого блока -->
-    <section class="SectionFour" id="requirementsIn" style="background-image: url(../../figma/SOS/img/Group2-min.jpg); background-size:cover">
+    <section class="SectionFour" id="requirementsIn">
         <div class="s4-h1up">
             <div class="s4-h1up-text">
                 Can My Computer Run this game?
@@ -306,8 +305,7 @@
 
 
     <!--   новая  вёрстка пятого блока -->
-    <section class="SectionFive"
-        style="background-image: url(../../figma/SOS/img/img-section-five-min.jpg); background-size:cover">
+    <section class="SectionFive">
        <div class="SOS-s5__wrapper">
            <div class="SOS-s5-left">
                 <div class="s5h1-up">
@@ -438,8 +436,7 @@
 
     <!-- вёрстка шестого блока -->
 
-    <section class="SectionSix" id="quotesIn"
-        style="background-image: url(../../figma/SOS/img/img-section-six-min.jpg); background-size:cover">
+    <section class="SectionSix" id="quotesIn">
         <div class="SOS-S6-wrapper">
             <div class="SOS-S6-inner">
                 <div class="SOS-s6-left">
